API changes

Group.is_user => Group.groupOfOne
User => UserAccount ("user" is a reserved word in several database dialects)
Group => CmnGroup ("group" is a reserved word in SQL, and always having to escape table names gets old very quickly,
    to say nothing about automatically generated code which sometimes cannot do this properly.)
    
Database changes
groups: rename is_user to group_of_one   
formats: add obj_version column   
objtypes: add obj_version column   
messages: add obj_version column
objects: rename lang_id to language_id


alter table groups rename is_user to group_of_one;
alter table formats add column obj_version bigint default 0 NOT NULL;
alter table objtypes add column obj_version bigint default 0 NOT NULL;
alter table messages add column obj_version bigint default 0 NOT NULL;
alter table objects rename column lang_id to language_id;
alter table objects rename column latestbranch to latest_branch;
alter table objects rename column latesthead to latest_head;
alter table relations rename column leftid to left_id;
alter table relations rename column rightid to right_id;